feat(iot): map dtcCodes in TelemetryCommandFromResourceAssembler